
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int count; } ;
typedef TYPE_1__ IjkAVDictionary ;



int ijk_av_dict_count(const IjkAVDictionary *m)
{
    return m ? m->count : 0;
}
